<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="Extension" Id="{e06cc85d-8666-43e0-8088-edc0359ce657}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Extension : INT
VAR_INPUT
	EndPosition: INT;
	State: INT;
END_VAR
VAR
	MovementEnum: Movement;
	NextState: INT;
	MotorDirectionEnum: MovementDirection;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Automatic.ExtensionPositionAuto > EndPosition THEN
	MotorDirectionEnum := MovementDirection.TowardsSensor;
ELSE
	MotorDirectionEnum := MovementDirection.AwayFromSensor;
END_IF

IF MotorDirectionEnum = MovementDirection.TowardsSensor THEN
	IF Automatic.ExtensionPositionAuto > EndPosition THEN	// it drops wood in the nearest bin
		IO.MotorExtensionDirection := (MotorDirectionEnum = MovementDirection.TowardsSensor);
		IF NOT Automatic.SafetyEON THEN
			Automatic.ECurrentlyMoving := TRUE;
			IO.MotorExtension := (MovementEnum = Movement.ON);
		END_IF
		NextState := State;
	ELSE
		IO.MotorExtension := (MovementEnum = Movement.OFF);
		NextState := State + 1;
		Automatic.ECurrentlyMoving := FALSE;
	END_IF
ELSE
	IF Automatic.ExtensionPositionAuto < EndPosition THEN
		IO.MotorExtensionDirection := (MotorDirectionEnum = MovementDirection.AwayFromSensor);
		IF NOT Automatic.SafetyEON THEN
			Automatic.ECurrentlyMoving := TRUE;
			IO.MotorExtension := (MovementEnum = Movement.ON);
		END_IF
		NextState := State;
	ELSE
		IO.MotorExtension := (MovementEnum = Movement.OFF);
		NextState := State + 1;
		Automatic.ECurrentlyMoving := FALSE;
	END_IF
END_IF

Extension := NextState;
RETURN;]]></ST>
    </Implementation>
    <LineIds Name="Extension">
      <LineId Id="107" Count="3" />
      <LineId Id="105" Count="1" />
      <LineId Id="46" Count="0" />
      <LineId Id="90" Count="5" />
      <LineId Id="102" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="78" Count="5" />
      <LineId Id="89" Count="0" />
      <LineId Id="84" Count="1" />
      <LineId Id="88" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>